--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.14",
     "yup": "^1.7.1",
